@@ -1,3 +1,14 @@
+What's new in ZODB3 3.3.1?
+==========================
+Release date: DD-MMM-2005
+
+Tests
+-----
+
+The various flavors of the ``check2ZODBThreads`` and ``check7ZODBThreads``
+tests are much less likely to suffer sproadic failures now.
+
+
 What's new in ZODB3 3.3.1c1?
 ============================
 Release date: 01-Apr-2005
